[package]
name = "wow-framework"
version = "0.1.0"
description = "wow framework"
readme = "README.md"
documentation = "https://docs.rs/wow-framework"
repository = "https://github.com/jellybobbin/wow-framework"
license = "MIT"
keywords = ["http", "web", "framework"]
authors = ["jellybobbin <jellybobbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
